# purification

./: .gitignore  README.en.md  README.md  RELEASE_NOTES.md  设计文档.md
.git-gitee/: COMMIT_EDITMSG  config  index  packed-refs
.git-gitee/logs/refs/heads/: master
.git-gitee/objects/pack/: pack-fcc57243690a4782fc88dae173bb3a28516c4e4c.idx  pack-fcc57243690a4782fc88dae173bb3a28516c4e4c.pack
.git-gitee/refs/remotes/origin/: master
.github/actions/setup/: action.yml
.github/workflows/: build.yml
wisweep/: package.json  pnpm-lock.yaml
wisweep/scripts/: build.ps1  ci-build.ps1  dev.ps1  package.ps1
wisweep/specs/: architecture.md
wisweep/src/: App.css  App.tsx
wisweep/src-tauri/: Cargo.toml  err.txt  tauri.conf.json
wisweep/src-tauri/src/: lib.rs  main.rs
wisweep/src-tauri/src/classifier/: engine.rs  mod.rs  rules.rs
wisweep/src-tauri/src/cleaner/: cleaner.rs  file_lock.rs  mod.rs  recycle.rs  secure_wipe.rs
wisweep/src-tauri/src/database/: database.rs  favorites.rs  history.rs  mod.rs
wisweep/src-tauri/src/models/: cleanup_result.rs  file_info.rs  mod.rs  rule.rs  scan_config.rs  scan_result.rs
wisweep/src-tauri/src/scanner/: empty_folder_detector.rs  mod.rs  progress.rs  scanner.rs
wisweep/src-tauri/src/utils/: file_ops.rs  mod.rs  platform.rs
wisweep/src/components/common/: Sidebar.css  Sidebar.tsx
wisweep/src/components/empty-folders/: EmptyFoldersPage.css  EmptyFoldersPage.tsx  index.ts
wisweep/src/components/history/: HistoryPage.css  (+1 more)
wisweep/src/stores/: index.ts
wisweep/src/types/: index.ts
wisweep/src/utils/: format.ts
(+15 files in other folders)
