[package]
name = "wisweep"
version = "1.0.0"
description = "智净大师 - 任意路径智能文件清理系统"
authors = ["wisweep"]
edition = "2021"

[lib]
name = "wisweep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
jwalk = "0.8"
glob = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
crossbeam = "0.8"
num_cpus = "1"
sysinfo = "0.33"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "winnt", "processthreadsapi", "restartmanager", "errhandlingapi", "shellapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

